--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,15 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^1.6",
+        "friendsofsymfony/ckeditor-bundle": "^1.2",
         "symfony/asset": "4.1.*",
         "symfony/console": "4.1.*",
         "symfony/debug-pack": "^1.0",
         "symfony/flex": "^1.1",
+        "symfony/form": "4.1.*",
         "symfony/framework-bundle": "4.1.*",
+        "symfony/maker-bundle": "^1.9",
+        "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "4.1.*",
         "symfony/yaml": "4.1.*"
     },
