ajout partie connexion utlisateur

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/framework-bundle": "4.1.*",
         "symfony/maker-bundle": "^1.9",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "4.1.*",
         "symfony/twig-bundle": "4.1.*",
         "symfony/yaml": "4.1.*"
     },
